docs/sass/general.sass
@import ../../config/colors
@import ../../config/spacing
@import ../../config/typography
@import ../../config/breakpoints
  
// General

html
  scroll-behavior: smooth
  
.content
  display: flex
  flex-direction: column
  align-items: center
  justify-content: flex-start
  padding: $spacing-6 0

.content__header
  display: flex
  flex-direction: column
  align-items: center
  justify-content: flex-start
  margin-top: $spacing-5
  margin-bottom: $spacing-3
  color: $color-neutral-0

.content__title
  font-weight: $font-weight-normal
  font-size: $font-size-6
  margin: 0

.content__title--main
  font-size: $font-size-8

.content__info
  font-family: 'Roboto', Arial, Helvetica, sans-serif
  font-weight: $font-weight-light
  font-size: $font-size-3

.content__info--main
  font-size: $font-size-5

.section
  margin: $spacing-3 auto

.subheader
  font-weight: $font-weight-normal
  font-size: $font-size-5
  color: $color-neutral-0
  text-align: center

// Nav

.nav
  height: 70px
  width: 100vw
  padding: 0 $spacing-8
  display: flex
  align-items: center
  justify-content: space-between
  position: fixed
  top: 0
  left: 0
  right: 0
  z-index: 3

.nav__background
  width: 100vw
  height: 70px
  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
  position: fixed
  top: 0
  left: 0
  right: 0

.nav__brand
  color: white
  font-size: $font-size-6
  font-weight: $font-weight-normal
  font-family: Open Sans
  text-decoration: none

.nav__menu
  height: 100%
  width: 49px
  z-index: 1

.nav__bar
  height: 3px
  width: 100%
  margin: 15px 0
  background-color: white

.nav__bar--1,
.nav__bar--3
  width: 50%

.nav__bar--1
  margin-left: auto
  transform-origin: top right
  transition: 0.3s transform

.nav__bar--2
  transition: 0.3s transform

.nav__bar--3
  transform-origin: bottom left
  transition: 0.3s transform

.nav__menu--active
  .nav__bar--1
    transform: translate(-8px, 1px) rotate(-45deg)
  .nav__bar--2
    transform: rotate(45deg)
  .nav__bar--3
    transform: translate(8px, -1px) rotate(-45deg)

.nav__close-area
  position: fixed
  top: 0
  bottom: 0
  height: 100vh
  width: 100vw
  left: auto
  right: 0
  pointer-events: none
  z-index: -1

.nav__drawer
  position: fixed
  top: 0
  right: 0
  height: 100vh
  width: 600px
  max-width: 90vw
  background: linear-gradient(to right, $color-green-4, $color-green-3)
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.25)
  padding: $spacing-7
  display: flex
  flex-direction: column
  align-items: center
  justify-content: space-between
  transform-origin: right
  transform: scaleX(0)
  transition: 0.3s transform
  +media($breakpoint-sm)
    padding: $spacing-6

.nav__drawer--active
  transform: scaleX(1)

  .nav__close-area
    pointer-events: all
  .nav__links
    opacity: 1
  .nav__socials
    opacity: 1

.nav__links
  width: 100%
  height: 100%
  display: flex
  flex-direction: column
  align-items: flex-start
  justify-content: flex-start
  opacity: 0
  transition: 0.3s opacity
  list-style: none

.nav__header 
  color: white
  font-size: $font-size-6
  font-family: Open Sans
  font-weight: $font-weight-semibold
  margin: $spacing-4 0

.nav__link
  text-decoration: none
  color: white
  font-size: $font-size-5
  font-family: Roboto
  font-weight: $font-weight-light
  margin-bottom: $spacing-1 

// Hero

.hero
  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
  z-index: 2
  position: relative
  padding: $spacing-8 0
  display: flex
  flex-direction: column
  align-items: center
  justify-content: center

.hero__header
  color: white
  font-family: Open Sans
  font-size: $font-size-9
  font-weight: $font-weight-normal
  margin-top: 0
  margin-bottom: $spacing-3

.hero__subheader
  color: white
  font-family: Roboto
  font-size: $font-size-6
  font-weight: $font-weight-light
  margin: 0

.hero__button
  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
  border: 2px solid white
  font-family: Open Sans
  font-weight: $font-weight-light
  font-size: $font-size-5
  color: white
  border-radius: 5px
  margin-top: $spacing-5
  padding: $spacing-1 $spacing-7

// Button

.buttons
  display: flex
  align-items: center
  justify-content: space-evenly
  width: 800px
  max-width: 90vw

// Container

.container__contents
  height: 40vh
  width: 100%
  background-color: $color-neutral-6
  display: flex
  align-items: center
  justify-content: center

.container__header
  font-weight: $font-weight-light
  text-align: center

// Headers

.headers
  display: flex
  align-items: center
  justify-content: space-evenly
  width: 80vw

.headers__left,
.headers__right
  display: flex
  flex-direction: column
  align-items: center
  justify-content: center

  h4
    text-align: center
    margin: $spacing-1

// Placeholders

.image-container
  height: 300px
  width: 300px

// Shadows

.shadow-boxes
  display: flex
  align-items: center
  justify-content: space-evenly

.shadow-box
  height: 200px
  width: 200px
  display: flex
  align-items: center
  justify-content: center
  margin: $spacing-3

